HLT-2769 right align the opening hours and making sure the text finishes in correct area

--- a/src/main/webapp/bundles/health_v2/less/journeyEngineOverrides.less
+++ b/src/main/webapp/bundles/health_v2/less/journeyEngineOverrides.less
@@ -48,7 +48,8 @@
   }
 }
 
-@media(@sm) {
+
+@media (@sm) {
   .icon-phone {
 	vertical-align:baseline;
 	&:before {
@@ -56,8 +57,11 @@
 	  font-size: 30px;
 	}
   }
+  .opening-hours {
+	padding-left: 35px;
+	letter-spacing:.5px;
+  }
 }
-
 .content {
   background-color: white;
   border:1px solid @border-colour;
